History: Fix alignment for grouped history results.
When grouped history is enabled, the entries appearing under a site
should be indented slightly.

Also, get rid of the extra margin on the sides of history entries. This
made sense when there was hover background color, but not anymore.

BUG=None
R=sergiu@chromium.org

Review URL: https://codereview.chromium.org/68653002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@234218 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 395648fbece652d0b98244bb5a8cf35730f9d286

--- a/chrome/browser/resources/history/history.css
+++ b/chrome/browser/resources/history/history.css
@@ -277,6 +277,14 @@ html[dir='rtl'] #display-filter-controls label span.first-button-component,
   padding: 0;
 }
 
+.site-results.grouped {
+  -webkit-padding-start: 18px;
+}
+
+.no-checkboxes .site-results.grouped {
+  -webkit-padding-start: 21px;
+}
+
 .month-results {
   -webkit-padding-start: 0;
 }
@@ -318,7 +326,6 @@ html[dir='rtl'] .number-visits {
 }
 
 .drop-down {
-  -webkit-margin-end: 5px;
   margin-top: 1px;
 }
 
@@ -339,7 +346,6 @@ html[dir='rtl'] .site-domain {
 
 .entry input[type='checkbox'] {
   -webkit-margin-end: 6px;
-  -webkit-margin-start: 4px;
   line-height: 1em;
   margin-top: 2px;
   min-width: 13px;
